fix front clicking